--- a/documentation/components/components-combobox.asciidoc
+++ b/documentation/components/components-combobox.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[components.combobox]]
 = [classname]#ComboBox#
 
+*_This section has not yet been updated for Vaadin Framework 8_*
+
 ifdef::web[]
 [.sampler]
 image:{live-demo-image}[alt="Live Demo", link="http://demo.vaadin.com/sampler/#ui/data-input/multiple-value/combo-box"]
