--- a/documentation/components/components-interfaces.asciidoc
+++ b/documentation/components/components-interfaces.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[components.interfaces]]
 = Interfaces and Abstractions
 
+*_This section has not yet been updated for Vaadin Framework 8_*
+
 ((("interfaces")))
 Vaadin user interface components are built on a skeleton of interfaces and
 abstract classes that define and implement the features common to all components
